--- a/static/styles-elements.css
+++ b/static/styles-elements.css
@@ -1,12 +1,11 @@
 header {
-    background-color: var(--color-accent-02);
+    background-color: var(--color-accent-01);
     box-shadow: var(--shadow-generic);
     padding: var(--buffer-small) var(--buffer-medium);
 }
 
 .msg-box {
-    max-width: 300px;
-    height: 350px;
+    max-width: 400px;
     margin: auto;
     padding: var(--buffer-medium);
     background-color: var(--color-accent-02);
@@ -17,4 +16,11 @@ header {
     align-items: center;
     display: flex;
     flex-direction: column;
+}
+
+.panel-box {
+    width: calc(100% - 2 * var(--buffer-medium));
+    height: calc(100% - 2 * var(--buffer-medium));
+    display: block;
+
 }
