--- a/static/styles-elements.css
+++ b/static/styles-elements.css
@@ -1,11 +1,12 @@
 header {
-    background-color: var(--color-accent-01);
-    box-shadow: var(--shadow-generic);
+    background-color: var(--color-accent-02);
+    border-radius: var(--border-radius);
+    border: 2px solid var(--color-accent-01);
     padding: var(--buffer-small) var(--buffer-medium);
 }
 
 .msg-box {
-    max-width: 400px;
+    max-width: 450px;
     margin: auto;
     padding: var(--buffer-medium);
     background-color: var(--color-accent-02);
@@ -22,5 +23,22 @@ header {
     width: calc(100% - 2 * var(--buffer-medium));
     height: calc(100% - 2 * var(--buffer-medium));
     display: block;
-
 }
+
+.container-inset {
+    padding: var(--buffer-large);
+    background-color: var(--color-accent-03);
+    border-radius: var(--border-radius);
+    border: 1px solid var(--color-accent-01);
+    box-shadow: var(--shadow-generic);
+}
+
+.nav-buttons {
+    display: flex;
+    gap: var(--buffer-medium);
+    height: var(--header-height);
+
+    align-items: center;
+}
+
+
